# scratch

./: README.md  flake.nix  hie.yaml  scratch.cabal
src/: Interview1.hs  Leetcode.hs  Main.hs  RandomStuff.hs  Scratch.hs
