cabal-version:   2.4
name:            scratch
version:         0
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
description:     Haskell scratchpad
author:          José María Landa Chávez
maintainer:      José María Landa Chávez - josemaria.landa@gmail.com
copyright:       2023-03-18 José María Landa Chávez
build-type:      Simple
extra-doc-files: 
  README.md
license:         NONE
  
common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: DeriveGeneric,
                      DeriveDataTypeable,
                      RankNTypes,
                      TypeApplications,
                      DataKinds,
                      ScopedTypeVariables,
                      BangPatterns,
                      FlexibleInstances,
                      FlexibleContexts,
                      KindSignatures,
                      PolyKinds,
                      TypeApplications,
                      TypeFamilies,
                      TypeOperators,
                      UndecidableInstances,
                      GADTs,
                      StandaloneKindSignatures,
                      AllowAmbiguousTypes,
                      TypeFamilyDependencies,
                      MultiWayIf
                      TemplateHaskell
                      QuasiQuotes
                      FunctionalDependencies
                      InstanceSigs
                      DeriveLift
  ghc-options:

executable scratch-exe
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  QuickCheck,
                  containers,
                  microlens,
                  refined,
                  profunctors,
                  memoize,
                  groupBy,
                  hashmap,
                  heap,
                  zippers,
                  split,
                  template-haskell,
                  text,
                  modern-uri
